--- a/package.json
+++ b/package.json
@@ -1,14 +1,31 @@
 {
-"name": "node-rest-auth",
-"main": "server.js",
-"dependencies": {
-"bcrypt": "^0.8.5",
-"body-parser": "~1.9.2",
-"express": "~4.9.8",
-"jwt-simple": "^0.3.1",
-"mongoose": "~4.2.4",
-"morgan": "~1.5.0",
-"passport": "^0.3.0",
-"passport-jwt": "^1.2.1"
-}
+  "name": "basicpassportjs",
+  "version": "1.0.0",
+  "description": "about passportjs",
+  "main": "server.js",
+  "dependencies": {
+    "bcrypt": "^0.8.5",
+    "body-parser": "~1.9.2",
+    "express": "~4.9.8",
+    "jwt-simple": "^0.3.1",
+    "mongoose": "~4.2.4",
+    "morgan": "~1.5.0",
+    "passport": "^0.3.0",
+    "passport-jwt": "^1.2.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hosoyamarcos/basicPassportJS.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hosoyamarcos/basicPassportJS/issues"
+  },
+  "homepage": "https://github.com/hosoyamarcos/basicPassportJS#readme"
 }
